@@ -1,3 +1,9 @@
+2012-05-09  human
+
+	* cobcrun.c : Added conversion for enabling options in WIN style;
+	  Use getopt for option parsing;
+	  Set LC_ALL "" for native messages
+
 2008-10-20  Roger While <simrw@sim-basis.de>
 
 	* cobcrun.c : Allow help and version options
